# teacher-schedule-dashboard-V2

./: .env.dev  .env.prod  .env.prod.db  .gitignore  Dockerfile  README.md  app.py  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  generate_hashed_pw.py  generate_users.py  hello.py  pyproject.toml  requirements.txt  schedule.py  utils.py
app/: Dockerfile  app.py  config.py  entrypoint.sh  pyproject.toml  requirements.txt  schedule.py  seed.py  utils.py
app/accounts/: __init__.py  forms.py  models.py  views.py
app/school/: models.py
app/static/js/: htmx.min.js
app/templates/: base.html  change_password.html  class_summary.html  dashboard.html  index.html  login.html  pdf_export.html  start.html  teacher.html  teacher_load.html
app/templates/partials/: _class_summary_table.html
services/nginx/: nginx.conf  nginx.prod.conf
services/web/: Dockerfile
services/web/project/: app.py  schedule.py  utils.py
services/web/project/templates/: class.html  dashboard.html  index.html  teacher_load.html
templates/: base.html  class_summary.html  teacher_load.html  upload.html
