[project]
name = "teacher-schedule-dashboard"
version = "0.1.0"
description = "Flask app to visualize teacher schedules from Excel file"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.1",
    "flask-bcrypt>=1.0.1",
    "flask-login>=0.6.3",
    "flask-migrate>=4.1.0",
    "flask-sqlalchemy>=3.1.1",
    "flask-testing>=0.8.1",
    "flask-wtf>=1.2.2",
    "gunicorn>=23.0.0",
    "natsort>=8.4.0",
    "numpy>=2.3.1",
    "openpyxl>=3.1.5",
    "pandas>=2.3.1",
    "psycopg2-binary>=2.9.10",
    "python-decouple>=3.8",
    "python-dotenv>=1.1.1",
    "weasyprint>=65.1",
]
