[project]
name = "teacher-schedule-dashboard"
version = "0.1.0"
description = "Flask app to visualize teacher schedules from Excel file"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.1",
    "gunicorn>=23.0.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.1",
    "python-dotenv>=1.1.1",
]
